shell/sass/gnome-shell/_common.scss
/* ... */
.datemenu-today-button {
  .day-label { color: $secondary_fg_color; }

  .date-label {
    @include fontscaling($ref_size * 1.5);
    color: $fg_color;
  }
}

.world-clocks-header,
.message-list-section-title {
  color: $secondary_fg_color;
  font-weight: 700;
}

.world-clocks-grid { spacing-rows: 0.4em; }

.calendar-month-label {
  padding: 4px 0;
  color: $fg_color;
  font-weight: 700;
  &:focus {
  }
}

.pager-button {
  width: 32px;
  height: 32px;
  border-radius: 32px;
  color: $fg_color;
  background-color: transparent;
  &:hover,
  &:focus { background-color: $semi_fill_color; }
  &:active { background-color: $fill_color; }
}

.calendar-change-month {
  &-back { // arrow back
    background-image: url("assets/calendar-arrow-left.svg");
    &:hover,
    &:focus { background-image: url("assets/calendar-arrow-left-hover.svg"); }

    &:rtl { background-image: url("assets/calendar-arrow-right.svg"); }
    &:rtl:hover,
    &:rtl:focus {
      background-image: url("assets/calendar-arrow-right-hover.svg");
    }
  }

  &-forward { // arrow foreward
    background-image: url("assets/calendar-arrow-right.svg");
    &:hover,
    &:focus { background-image: url("assets/calendar-arrow-right-hover.svg"); }

    &:rtl { background-image: url("assets/calendar-arrow-left.svg"); }
    &:rtl:hover,
    &:rtl:focus {
      background-image: url("assets/calendar-arrow-left-hover.svg");
    }
  }
}

.calendar-day-base {
  @include fontscaling($ref_size * 0.9);
  width: 32px;
  height: 32px;
  padding: 0;
  margin: 2px;
  border-radius: 32px;
  text-align: center;
  &:hover,
  &:focus { background-color: $semi_fill_color; }
  &:active,
  &:selected {
    color: $selected_fg_color;
    background-color: $selected_bg_color;
    border-color: transparent; // avoid jumparound due to today
  }

  &.calendar-day-heading { // day of week heading
    @include fontscaling($ref_size * 0.9);
    width: 32px;
    height: 25.3px;
    margin-top: 2px;
    padding: 6.7px 0 0;
    background-color: transparent;
    color: $dim_fg_color;
    font-weight: 700;
    text-align: center;
  }
}

.calendar-week-number { // day of week heading
  @include fontscaling($ref_size * 0.9);
  width: 32px;
  height: 25.3px;
  margin: 2px;
  padding: 6.7px 0 0;
  background-color: transparent;
  color: $dim_fg_color;
  font-weight: 700;
  text-align: center;
}

.calendar-day { // border collapse hack - see calendar.js
  border-width: 0;

  &-top { border-top-width: 0; }

  &-left { border-left-width: 0; }

  &-with-events {
    background-image: none;
    color: $link_color;
    font-weight: 400;
    text-decoration: underline;
  }
}

.calendar-work-day {
}

.calendar-nonwork-day { color: $fg_color; }

.calendar-today {
  border: none;
  font-weight: 700;
}

.calendar-other-month-day { color: $dim_fg_color; }


// /****************
//  * Message List *
//  ****************/

.message-list {
  width: if($eta == 'false', 420px, 380px);

  &-sections { spacing: if($eta == 'false', 1.5em, 1.2em); }

  &-section,
  &-section-list { spacing: 0.7em; }

  &-section-title-box { spacing: 0.4em; }

  &-section-close {
    > StIcon {
      padding: 6px;
      border-radius: 20px;
      icon-size: 20px;
      color: $secondary_fg_color;
      background-color: transparent;
    }

    // FIXME: how do you do this in sass?
    &:hover > StIcon,
    &:focus > StIcon {
      color: $fg_color;
      background-color: $semi_fill_color;
    }
    &:active > StIcon {
      color: $fg_color;
      background-color: $fill_color;
    }
  }
}

.message {
  min-height: 22px;
  padding: 6px;
  border-radius: 0;
  background-color: $semi_fill_color;
  color: $secondary_fg_color;
  box-shadow: inset 4px 0 $semi_fill_color;

  &:rtl { box-shadow: inset -4px 0 $semi_fill_color; }

  &:hover,
  &:focus {
    background-color: $accent_fill_color;
    color: $fg_color;
    box-shadow: inset 4px 0 $secondary_accent_color;

    &:rtl { box-shadow: inset -4px 0 $secondary_accent_color; }
  }
  &:active {
    background-color: $accent_active_fill_color;
    color: $fg_color;
    box-shadow: inset 4px 0 $accent_color;

    &:rtl { box-shadow: inset -4px 0 $accent_color; }
  }

  &-icon-bin {
    padding: 3px 0 3px 6px;
    &:rtl { padding: 3px 6px 3px 0; }

    > StIcon { icon-size: 32px; }
  }

  &-secondary-bin {
    color: $dim_fg_color;
    &:ltr { padding-left: 6px; }
    &:rtl { padding-right: 6px; }

    > StIcon { icon-size: 16px; }
  }

  &-title {
    @include fontscaling($ref_size * 1.1);
    padding: 0 0 2px;
    font-weight: 700;
  }

  &-content {
    @include fontscaling($ref_size * 0.9);
    padding: 2px 8px 4px;

    * > StIcon {
      padding: 3px;
      border-radius: 14px; // = 1.09em
      icon-size: 14px;
      color: $secondary_fg_color;
    }

    // FIXME: how do you do this in sass?
    *:hover > StIcon,
    *:focus > StIcon {
      color: $fg_color;
      background-color: $semi_fill_color;
    }
    *:active > StIcon {
      color: $fg_color;
      background-color: $fill_color;
    }
  }
}

.message-media-control {
  padding: 0 8px;
  margin: 0 6px;
  border-radius: 100px;
  color: $secondary_accent_label_color;
  background: transparent;
  background-size: 32px 32px;

  &:hover {
    color: $accent_label_color;
    background-image: url("assets/media-control-hover.svg");
    background-size: 32px 32px;
  }
  &:active {
    color: $accent_label_color;
    background-image: url("assets/media-control-active.svg");
    background-size: 32px 32px;
  }
}

.media-message-cover-icon {
  icon-size: 32px;

  &.fallback {
    icon-size: 16px;
    padding: 8px;
    border: none;
    border-radius: 2px;
    color: $dim_fg_color;
    background-color: $base_color;
    box-shadow: $z-depth-1;
  }
}
/* ... */

